# GReX-T0

./: .envrc  Cargo.toml  README.md  manifest.scm  set_cap_perms.sh  wrapper.h
.cargo/: config.toml
benches/: benchmarks.rs
gateware/: grex_gateware.fpg  grex_gateware_2022-11-09_2251.fpg  grex_gateware_2023-02-06_1503.fpg  grex_gateware_2023-02-09_1739.fpg  grex_gateware_2023-03-29_1713.fpg
src/: args.rs  calibrate.rs  capture.rs  common.rs  dumps.rs  exfil.rs  fpga.rs  injection.rs  lib.rs  main.rs  monitoring.rs  processing.rs  tui.rs
