[package]
name = "grex_t0"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1"
casperfpga = { git = "https://github.com/kiranshila/casperfpga_rs", branch = "main" }
casperfpga_derive = "0.1"
clap = { version = "4", features = ["derive"] }
fixed = "1"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust", branch = "master" }
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
lazy_static = "1.4"
log = "0.4"
prometheus = "0.13"
ndarray = "0.15"
num-complex = "0.4"
pretty_env_logger = "0.4"
regex = "1"
rsntp = "3"
socket2 = "0.4"
tokio = { version = "1.15", features = ["full"] }
thiserror = "1"
core_affinity = "0.8"
psrdada = "0.2"
byte-slice-cast = "1"
lending-iterator = "0.1"
thingbuf = { version = "0.1", features = ["static"] }
arrayvec = "0.7"
sigproc_filterbank = "0.3"
hifitime = "3"
memmap2 = "0.5"
rand_distr = "0.4"
rand = "0.8"

[lib]
name = "grex_t0"
path = "src/lib.rs"

[[bin]]
name = "grex_t0"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = 1
panic = "abort"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
